# brainfuck

./: CMakeLists.txt  README.md  bfc.sh
bf-opt/: CMakeLists.txt  bf-opt.cpp
bf-translate/: CMakeLists.txt  bf-translate.cpp
bfc/: CMakeLists.txt  bfc.cpp
include/: Lexer.h  MLIRGen.h
include/Bf/Conversion/: Passes.h  Passes.td
include/Bf/Dialect/bf/IR/: BfDialect.h  BfDialect.td  BfOps.h  BfOps.td  CMakeLists.txt
include/Bf/Dialect/bflow/IR/: BfLowDialect.h  BfLowDialect.td  BfLowOps.h  BfLowOps.td  CMakeLists.txt
lib/: CMakeLists.txt
lib/Bf/Conversion/: CMakeLists.txt  Passes.cpp
lib/Bf/Dialect/: CMakeLists.txt
lib/Bf/Dialect/bf/IR/: BfDialect.cpp  BfOps.cpp
lib/Bf/Dialect/bflow/IR/: BfLowDialect.cpp  BfLowOps.cpp  CMakeLists.txt
scripts/: awib.bf  factor.bf  fib.bf  golden.bf  hanoi.bf  mul.bf  yapi.bf
